--- a/app/src/main/res/layout/organizer_add_event_activity.xml
+++ b/app/src/main/res/layout/organizer_add_event_activity.xml
@@ -65,7 +65,9 @@
                 android:id="@+id/text_organizer_add_event_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                android:inputType="none"
+                android:focusable="false"
+                android:clickable="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Event Time -->
@@ -80,7 +82,9 @@
                 android:id="@+id/text_organizer_add_event_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                android:inputType="none"
+                android:focusable="false"
+                android:clickable="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Category RadioGroup -->
